# DiffEqSolver

./: .gitignore  CMakeLists.txt  LICENSE_THIRD_PARTY  README.md  ToDo.txt  config.txt  vcpkg.json
.github/workflows/: build-test.yml  cmake-linux-multiple-compilers.yml  cmake-linux.yml  cmake-multi-platform-multi-compiler.yml  pythonValidate.yml
src/: Coefficients.hpp  FunctionInputs.hpp  Main.cpp  Point.hpp  main.cpp
src/Input/: ConfigReader.cpp  ConfigReader.hpp  UserInput.hpp  UserInputs.hpp
src/Math/: BoundaryCondition.hpp  Coefficients.hpp  TrigFunc.hpp
src/Output/: ResultWriter.cpp  ResultWriter.hpp
src/Plot/: Main.py  Plot.py
src/Solvers/: CosineSolver.cpp  CosineSolver.hpp  PolynomialSolver.cpp  PolynomialSolver.hpp  SineSolver.cpp  SineSolver.hpp  Solver.cpp  Solver.hpp  Solver1D.cpp  Solver1D.hpp  Solver2D.cpp  Solver2D.hpp
src/Solvers/Solvers1D/: Solver1D.cpp  Solver1D.hpp  SolverPolynomial.cpp  SolverPolynomial.hpp  SolverSine.cpp  SolverSine.hpp  SolverTrig.cpp  SolverTrig.hpp
src/Solvers/Solvers2D/: Solver2D.cpp  Solver2D.hpp  SolverAdvection.cpp  SolverAdvection.hpp  SolverAdvectionDirichlet.cpp  SolverAdvectionDirichlet.hpp  SolverHeat.cpp  SolverHeat.hpp  SolverHeatDirichlet.cpp  SolverHeatDirichlet.hpp  SolverWave.cpp  SolverWave.hpp
src/input/: configReader.hpp  userInputs.hpp
src/output/: resultWriter.hpp
src/plot/: main.py  plot.py
src/solvers/: solver.cpp  solver.hpp
src/solvers/solvers1D/: solver1D.cpp  solver1D.hpp  solverPolynomial.cpp  solverPolynomial.hpp  solverTrig.cpp  solverTrig.hpp
src/solvers/solvers2D/: solver2D.cpp  solver2D.hpp  solverAdvection.cpp  solverAdvection.hpp  solverHeat.cpp  solverHeat.hpp  solverWave.cpp  solverWave.hpp
tests/: ConfigReaderTest.cpp  ResultWriterTest.cpp  SolverTest.cpp
tests/Input/: ConfigReaderTests.cpp
tests/Input/Resource/: config.txt
tests/Output/: ResultWriterTests.cpp
tests/Output/Resource/: data2dExpected.txt
tests/Solvers/Solvers1D/: SolverTrigTests.cpp
tests/Solvers/Solvers2D/: SolverHeatTests.cpp
tests/input/: configReaderTests.cpp
tests/output/: resultWriterTests.cpp
tests/output/resource/: data3dExpected.txt
tests/solvers/solvers1D/: solverTrigTests.cpp
tests/solvers/solvers2D/: solverHeatTests.cpp
